test/npm/haxe/openfl/errors/ArgumentErrorTest.hx
package openfl.errors;


class ArgumentErrorTest { public static function __init__ () { Mocha.describe ("Haxe | ArgumentError", function () {
	
	
	Mocha.it ("new", function () {
		
		// TODO: Confirm functionality
		
		var argumentError = new ArgumentError ();
		Assert.notEqual (argumentError, null);
		
	});
	
	
}); }}